Small style changes, more fixes to post truncation and performance improvements.

--- a/stylesheets/less/index.less
+++ b/stylesheets/less/index.less
@@ -24,6 +24,7 @@
 	}
 	
 	#content_primary, #content_secondary, #content_tertiary {
+		margin-bottom:@row-height;
 		.post {
 			margin-bottom:@row-height;
 			.read-more {
@@ -91,7 +92,7 @@
 			}
 		}
 		.post:nth-child(4n) { margin-right:0; }
-		.post:nth-child(n+4) {
+		.post:nth-child(n+5) {
 			margin-top:0;
 		}
 	}
