--- a/stylesheets/less/srd.less
+++ b/stylesheets/less/srd.less
@@ -436,10 +436,7 @@
 			}
 		}
 	}
-	a {
-		text-decoration:none;
-		
-	}
+
 	#footer_main_promo {
 		width:330px;
 		height:180px;
